# autumn2025-lectures

./: .gitignore  README.md  backpropagation.py  bayes.py  bayes_learning.py  deep_learning.py  first_order_logic.py  games.py  gibbs_sampling.py  history.py  index.html  linear_classification.py  linear_regression.py  mdp.py  policy_gradient.py  propositional_logic.py  pyproject.toml  rc  reinforcement_learning.py  search.py  simultaneous_games.py  society.py  td_learning.py  tensors.py  ucs_astar.py  util.py  welcome.py
assets/: index-Bja7qZwr.js  index-Cf9NckVx.js  index-CfE81irP.js  index-D0UD8Sch.js  index-DeJPPWlt.css  index-OQf9aLyk.js  index-uTVXf9y9.js
var/: diamond_graph  dice_game_graph  flaky_tram_graph  graph-sq-xyz  graph-sq-xyz2  graph-xyz  graph-xyz2  grid_graph  line_graph
var/files/: arxiv-015d2999eac2477935e1a2bb11b2a38a-http_export_arxiv_org_api_query_id_list_1706_03762  arxiv-08ecff3f6f9d49fa62cff4378a445f41-http_export_arxiv_org_api_query_id_list_2402_15018  arxiv-315f2a6d9a9ae615f8f6745944c203d0-http_export_arxiv_org_api_query_id_list_1412_6980  arxiv-352a378496379368ed0354da7aed18aa-http_export_arxiv_org_api_query_id_list_1910_10683  arxiv-3a31fe264cb8db6adea48b9404f61261-http_export_arxiv_org_api_query_id_list_1805_00899  arxiv-4319e0189389317749a4fe14774ac8ca-http_export_arxiv_org_api_query_id_list_2412_19437  arxiv-486018993c702333917e544984f3653a-http_export_arxiv_org_api_query_id_list_1802_05365  arxiv-604bcc9f1717fa52b167e45d7518998b-http_export_arxiv_org_api_query_id_list_2502_11844  (+27 more)
var/traces/: backpropagation.json  bayes.json  mdp.json  (+18 more)
