[project]
name = "autumn2025-lectures"
version = "0.1.0"
description = "Executable lectures for CS221 (Autumn 2025)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "edtrace>=0.1.0",
    "einops>=0.8.1",
    "graphviz>=0.21",
    "jaxtyping>=0.3.2",
    "scipy>=1.16.3",
    "tiktoken>=0.11.0",
    "transformers>=4.57.0",
]
